move pay by space to beginning and fix alignment in full card

--- a/client/src/components/ParkingInfoPage/PSGroup/PSCard/FullPSCardBody/FullPSCardBody.css
+++ b/client/src/components/ParkingInfoPage/PSGroup/PSCard/FullPSCardBody/FullPSCardBody.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
+    height: 100%;
     align-items: center;
-
 }
